// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🚀 Cleanup Components/Buttons/IconButtonGroup IconButtonGroup 1`] = `
.c4 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  color: #666666;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: pointer;
  font-size: 20px;
}

.c2:active {
  color: #666666;
}

.c2.focus-visible,
.c2[data-focus-visible-added] {
  background-color: transparent;
}

.c2.focus-visible:active,
.c2[data-focus-visible-added]:active {
  color: rgba(102,102,102,0.88);
}

.c2.focus-visible:after,
.c2[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: -3px;
  right: -3px;
  bottom: -3px;
  left: -3px;
  box-shadow: 0 0 0 2px #066FAC;
  border-radius: 50%;
  pointer-events: none;
  z-index: 1;
}

.c2.RcIconButton-persistBg {
  background-color: rgba(102,102,102,0.12);
}

.c2.RcIconButton-disabled {
  color: #C7C7C7;
}

.c2.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c2.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c2.RcIconButton-contained {
  color: #fff;
  background-color: #666666;
}

.c2.RcIconButton-contained.RcIconButton-disabled {
  background-color: #E5E5E5;
  color: #939393;
}

.c2.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c2.RcIconButton-contained.focus-visible,
.c2.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c2.RcIconButton-contained.focus-visible:before,
.c2.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c2.RcIconButton-contained:active {
  color: #fff;
}

.c2 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c1 {
  border-radius: 100vw;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
}

.c1 > * + * {
  margin-left: 20px;
}

.c0 .group {
  background: #F3F3F3;
  box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12);
}

@media (hover:hover) and (pointer:fine) {
  .c2:hover {
    background-color: transparent;
    color: rgba(102,102,102,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c2.RcIconButton-contained:hover {
    color: #fff;
  }

  .c2.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

<div
  className="c0"
>
  <div
    className="c1 group"
    direction="horizontal"
    onClick={[Function]}
    onKeyUp={[Function]}
  >
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c2 RcIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c3 emoji icon"
      >
        <svg
          className="c4"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm0 2C9.373 4 4 9.373 4 16s5.373 12 12 12 12-5.373 12-12S22.627 4 16 4zm4.328 14.505a1 1 0 1 1 1.73 1.004A6.997 6.997 0 0 1 16 23a6.996 6.996 0 0 1-6.031-3.445 1 1 0 1 1 1.723-1.017A4.997 4.997 0 0 0 16.001 21a4.995 4.995 0 0 0 4.328-2.495zM11 10a2 2 0 1 1 .001 3.999A2 2 0 0 1 11 10zm10 0a2 2 0 1 1 .001 3.999A2 2 0 0 1 21 10z"
          />
        </svg>
        
      </span>
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c2 RcIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c3 quote icon"
      >
        <svg
          className="c4"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M28 4a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2h-7.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141a1 1 0 0 0-.707-.293H4.001a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h24zm-1 2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h7a2 2 0 0 1 1.414.586L16 25.172l2.586-2.586A2 2 0 0 1 20 22h7a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1zm-15 4a3 3 0 0 1 2.98 2.65l.015.185.005.164-.004.147a2.529 2.529 0 0 1-.01.152l.001-.031a6.958 6.958 0 0 1-3.056 5.525.5.5 0 0 1-.579-.818 6.018 6.018 0 0 0 2.026-2.31 3 3 0 1 1-1.376-5.666zm8 0a3 3 0 0 1 2.98 2.65l.015.185.005.164-.004.147a2.529 2.529 0 0 1-.01.152v-.031a6.958 6.958 0 0 1-3.056 5.525.5.5 0 0 1-.579-.818 6.018 6.018 0 0 0 2.026-2.31 3 3 0 1 1-1.376-5.666z"
          />
        </svg>
        
      </span>
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c2 RcIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c3 unpin icon"
      >
        <svg
          className="c4"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9.946 20.442 1.613 1.613-7.256 7.256c-.445.445-2.78 2.058-3.225 1.613s1.167-2.78 1.613-3.225l7.256-7.256zM19.63 1.154c.086.05.165.11.235.181l10.802 10.801a1.141 1.141 0 0 1-.235 1.794l-8.715 5.046a10.246 10.246 0 0 1-2.901 8.723 1.141 1.141 0 0 1-1.613 0l-12.9-12.9a1.141 1.141 0 0 1 0-1.613 10.248 10.248 0 0 1 8.724-2.901l5.045-8.715a1.14 1.14 0 0 1 1.558-.415zm-.389 2.385-5.161 8.917-1.338-.192a8.249 8.249 0 0 0-6.105 1.54l-.281.219 11.62 11.62.029-.033a8.24 8.24 0 0 0 1.768-6.055l-.037-.296-.192-1.338 8.916-5.163-9.219-9.219z"
          />
        </svg>
        
      </span>
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c2 RcIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c3 signal-0 icon"
      >
        <svg
          className="c4"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm10 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm10 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zM6 14a2 2 0 1 0-.001 3.999A2 2 0 0 0 6 14zm10 0a2 2 0 1 0-.001 3.999A2 2 0 0 0 16 14zm10 0a2 2 0 1 0-.001 3.999A2 2 0 0 0 26 14z"
          />
        </svg>
        
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots 🚀 Cleanup Components/Buttons/IconButtonGroup IconButtonGroup Examples 1`] = `
.c5 {
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 20px;
  height: 20px;
  color: #666666;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: pointer;
  font-size: 20px;
}

.c3:active {
  color: #666666;
}

.c3.focus-visible,
.c3[data-focus-visible-added] {
  background-color: transparent;
}

.c3.focus-visible:active,
.c3[data-focus-visible-added]:active {
  color: rgba(102,102,102,0.88);
}

.c3.focus-visible:after,
.c3[data-focus-visible-added]:after {
  content: '';
  position: absolute;
  top: -3px;
  right: -3px;
  bottom: -3px;
  left: -3px;
  box-shadow: 0 0 0 2px #066FAC;
  border-radius: 50%;
  pointer-events: none;
  z-index: 1;
}

.c3.RcIconButton-persistBg {
  background-color: rgba(102,102,102,0.12);
}

.c3.RcIconButton-disabled {
  color: #C7C7C7;
}

.c3.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c3.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c3.RcIconButton-contained {
  color: #fff;
  background-color: #666666;
}

.c3.RcIconButton-contained.RcIconButton-disabled {
  background-color: #E5E5E5;
  color: #939393;
}

.c3.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c3.RcIconButton-contained.focus-visible,
.c3.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c3.RcIconButton-contained.focus-visible:before,
.c3.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c3.RcIconButton-contained:active {
  color: #fff;
}

.c3 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 40px;
  height: 40px;
  color: #666666;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: pointer;
  font-size: 20px;
}

.c7:active {
  color: #666666;
}

.c7.focus-visible,
.c7[data-focus-visible-added] {
  background-color: rgba(102,102,102,0.16);
}

.c7.focus-visible:active,
.c7[data-focus-visible-added]:active {
  color: rgba(102,102,102,0.88);
}

.c7.RcIconButton-persistBg {
  background-color: rgba(102,102,102,0.12);
}

.c7.RcIconButton-disabled {
  color: #C7C7C7;
}

.c7.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c7.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c7.RcIconButton-contained {
  color: #fff;
  background-color: #666666;
}

.c7.RcIconButton-contained.RcIconButton-disabled {
  background-color: #E5E5E5;
  color: #939393;
}

.c7.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c7.RcIconButton-contained.focus-visible,
.c7.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c7.RcIconButton-contained.focus-visible:before,
.c7.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c7.RcIconButton-contained:active {
  color: #fff;
}

.c7 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 40px;
  height: 40px;
  color: #666666;
  border-radius: 50%;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: pointer;
  background-color: rgba(102,102,102,0.16);
  font-size: 20px;
}

.c8:active {
  color: #666666;
}

.c8.focus-visible,
.c8[data-focus-visible-added] {
  background-color: rgba(102,102,102,0.32);
}

.c8.focus-visible:active,
.c8[data-focus-visible-added]:active {
  color: rgba(102,102,102,0.88);
}

.c8.RcIconButton-persistBg {
  background-color: rgba(102,102,102,0.16);
}

.c8.RcIconButton-disabled {
  color: #C7C7C7;
  background-color: rgba(102,102,102,0.12);
}

.c8.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c8.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c8.RcIconButton-contained {
  color: #fff;
  background-color: #666666;
}

.c8.RcIconButton-contained.RcIconButton-disabled {
  background-color: #E5E5E5;
  color: #939393;
}

.c8.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 50%;
  position: absolute;
}

.c8.RcIconButton-contained.focus-visible,
.c8.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c8.RcIconButton-contained.focus-visible:before,
.c8.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c8.RcIconButton-contained:active {
  color: #fff;
}

.c8 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 40px;
  height: 40px;
  color: #666666;
  border-radius: 4px;
  -webkit-transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background 150ms cubic-bezier(0.4,0,0.2,1) 0ms;
  cursor: pointer;
  font-size: 24px;
}

.c10:active {
  color: #666666;
}

.c10.focus-visible,
.c10[data-focus-visible-added] {
  background-color: rgba(102,102,102,0.16);
}

.c10.focus-visible:active,
.c10[data-focus-visible-added]:active {
  color: rgba(102,102,102,0.88);
}

.c10.RcIconButton-persistBg {
  background-color: rgba(102,102,102,0.12);
}

.c10.RcIconButton-disabled {
  color: #C7C7C7;
}

.c10.RcIconButton-invisible {
  opacity: 0;
  visibility: hidden;
  width: 0;
  height: 0;
}

.c10.RcIconButton-outline {
  border: 1px solid #C7C7C7;
}

.c10.RcIconButton-contained {
  color: #fff;
  background-color: #666666;
}

.c10.RcIconButton-contained.RcIconButton-disabled {
  background-color: #E5E5E5;
  color: #939393;
}

.c10.RcIconButton-contained:before {
  content: '';
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  border-radius: 4px;
  position: absolute;
}

.c10.RcIconButton-contained.focus-visible,
.c10.RcIconButton-contained[data-focus-visible-added] {
  color: #fff;
}

.c10.RcIconButton-contained.focus-visible:before,
.c10.RcIconButton-contained[data-focus-visible-added]:before {
  background-color: rgba(255,255,255,0.16);
}

.c10.RcIconButton-contained:active {
  color: #fff;
}

.c10 .RcIconButtonTouchRipple-ripplePulsate {
  border-radius: 0;
  -webkit-animation-name: none;
  animation-name: none;
  opacity: 0;
}

.c10 .RcIconButtonTouchRipple-child {
  -webkit-transform: scale(1.41421357);
  -ms-transform: scale(1.41421357);
  transform: scale(1.41421357);
}

.c2 {
  border-radius: 100vw;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
}

.c2 > * + * {
  margin-left: 12px;
}

.c6 {
  border-radius: 100vw;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 > * + * {
  margin-left: 0;
}

.c9 {
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  white-space: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 > * + * {
  margin-left: 0;
}

.c1 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

.c0 .group {
  background: #F3F3F3;
  box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12);
}

@media (hover:hover) and (pointer:fine) {
  .c3:hover {
    background-color: transparent;
    color: rgba(102,102,102,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c3.RcIconButton-contained:hover {
    color: #fff;
  }

  .c3.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c7:hover {
    background-color: rgba(102,102,102,0.08);
    color: rgba(102,102,102,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c7.RcIconButton-contained:hover {
    color: #fff;
  }

  .c7.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c8:hover {
    background-color: rgba(102,102,102,0.24);
    color: rgba(102,102,102,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c8.RcIconButton-contained:hover {
    color: #fff;
  }

  .c8.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c10:hover {
    background-color: rgba(102,102,102,0.08);
    color: rgba(102,102,102,0.88);
  }
}

@media (hover:hover) and (pointer:fine) {
  .c10.RcIconButton-contained:hover {
    color: #fff;
  }

  .c10.RcIconButton-contained:hover:before {
    background-color: rgba(255,255,255,0.08);
  }
}

<div
  className="c0"
  style={
    Object {
      "textAlign": "center",
    }
  }
>
  <h5
    className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="headline1"
  >
    plain
  </h5>
  <div
    className="c2 group"
    direction="horizontal"
    onClick={[Function]}
    onKeyUp={[Function]}
  >
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c3 RcIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 emoji icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm0 2C9.373 4 4 9.373 4 16s5.373 12 12 12 12-5.373 12-12S22.627 4 16 4zm4.328 14.505a1 1 0 1 1 1.73 1.004A6.997 6.997 0 0 1 16 23a6.996 6.996 0 0 1-6.031-3.445 1 1 0 1 1 1.723-1.017A4.997 4.997 0 0 0 16.001 21a4.995 4.995 0 0 0 4.328-2.495zM11 10a2 2 0 1 1 .001 3.999A2 2 0 0 1 11 10zm10 0a2 2 0 1 1 .001 3.999A2 2 0 0 1 21 10z"
          />
        </svg>
        
      </span>
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c3 RcIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 quote icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M28 4a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2h-7.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141a1 1 0 0 0-.707-.293H4.001a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h24zm-1 2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h7a2 2 0 0 1 1.414.586L16 25.172l2.586-2.586A2 2 0 0 1 20 22h7a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1zm-15 4a3 3 0 0 1 2.98 2.65l.015.185.005.164-.004.147a2.529 2.529 0 0 1-.01.152l.001-.031a6.958 6.958 0 0 1-3.056 5.525.5.5 0 0 1-.579-.818 6.018 6.018 0 0 0 2.026-2.31 3 3 0 1 1-1.376-5.666zm8 0a3 3 0 0 1 2.98 2.65l.015.185.005.164-.004.147a2.529 2.529 0 0 1-.01.152v-.031a6.958 6.958 0 0 1-3.056 5.525.5.5 0 0 1-.579-.818 6.018 6.018 0 0 0 2.026-2.31 3 3 0 1 1-1.376-5.666z"
          />
        </svg>
        
      </span>
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c3 RcIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 unpin icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9.946 20.442 1.613 1.613-7.256 7.256c-.445.445-2.78 2.058-3.225 1.613s1.167-2.78 1.613-3.225l7.256-7.256zM19.63 1.154c.086.05.165.11.235.181l10.802 10.801a1.141 1.141 0 0 1-.235 1.794l-8.715 5.046a10.246 10.246 0 0 1-2.901 8.723 1.141 1.141 0 0 1-1.613 0l-12.9-12.9a1.141 1.141 0 0 1 0-1.613 10.248 10.248 0 0 1 8.724-2.901l5.045-8.715a1.14 1.14 0 0 1 1.558-.415zm-.389 2.385-5.161 8.917-1.338-.192a8.249 8.249 0 0 0-6.105 1.54l-.281.219 11.62 11.62.029-.033a8.24 8.24 0 0 0 1.768-6.055l-.037-.296-.192-1.338 8.916-5.163-9.219-9.219z"
          />
        </svg>
        
      </span>
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c3 RcIconButton-root"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 signal-0 icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm10 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm10 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zM6 14a2 2 0 1 0-.001 3.999A2 2 0 0 0 6 14zm10 0a2 2 0 1 0-.001 3.999A2 2 0 0 0 16 14zm10 0a2 2 0 1 0-.001 3.999A2 2 0 0 0 26 14z"
          />
        </svg>
        
      </span>
    </button>
  </div>
  <h5
    className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="headline1"
  >
    round
  </h5>
  <div
    className="c6 group"
    direction="horizontal"
    onClick={[Function]}
    onKeyUp={[Function]}
  >
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c7 RcIconButton-root RcIconButton-round"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 emoji icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm0 2C9.373 4 4 9.373 4 16s5.373 12 12 12 12-5.373 12-12S22.627 4 16 4zm4.328 14.505a1 1 0 1 1 1.73 1.004A6.997 6.997 0 0 1 16 23a6.996 6.996 0 0 1-6.031-3.445 1 1 0 1 1 1.723-1.017A4.997 4.997 0 0 0 16.001 21a4.995 4.995 0 0 0 4.328-2.495zM11 10a2 2 0 1 1 .001 3.999A2 2 0 0 1 11 10zm10 0a2 2 0 1 1 .001 3.999A2 2 0 0 1 21 10z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c7 RcIconButton-root RcIconButton-round"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 quote icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M28 4a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2h-7.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141a1 1 0 0 0-.707-.293H4.001a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h24zm-1 2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h7a2 2 0 0 1 1.414.586L16 25.172l2.586-2.586A2 2 0 0 1 20 22h7a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1zm-15 4a3 3 0 0 1 2.98 2.65l.015.185.005.164-.004.147a2.529 2.529 0 0 1-.01.152l.001-.031a6.958 6.958 0 0 1-3.056 5.525.5.5 0 0 1-.579-.818 6.018 6.018 0 0 0 2.026-2.31 3 3 0 1 1-1.376-5.666zm8 0a3 3 0 0 1 2.98 2.65l.015.185.005.164-.004.147a2.529 2.529 0 0 1-.01.152v-.031a6.958 6.958 0 0 1-3.056 5.525.5.5 0 0 1-.579-.818 6.018 6.018 0 0 0 2.026-2.31 3 3 0 1 1-1.376-5.666z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c7 RcIconButton-root RcIconButton-round"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 unpin icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9.946 20.442 1.613 1.613-7.256 7.256c-.445.445-2.78 2.058-3.225 1.613s1.167-2.78 1.613-3.225l7.256-7.256zM19.63 1.154c.086.05.165.11.235.181l10.802 10.801a1.141 1.141 0 0 1-.235 1.794l-8.715 5.046a10.246 10.246 0 0 1-2.901 8.723 1.141 1.141 0 0 1-1.613 0l-12.9-12.9a1.141 1.141 0 0 1 0-1.613 10.248 10.248 0 0 1 8.724-2.901l5.045-8.715a1.14 1.14 0 0 1 1.558-.415zm-.389 2.385-5.161 8.917-1.338-.192a8.249 8.249 0 0 0-6.105 1.54l-.281.219 11.62 11.62.029-.033a8.24 8.24 0 0 0 1.768-6.055l-.037-.296-.192-1.338 8.916-5.163-9.219-9.219z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c7 RcIconButton-root RcIconButton-round"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 signal-0 icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm10 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm10 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zM6 14a2 2 0 1 0-.001 3.999A2 2 0 0 0 6 14zm10 0a2 2 0 1 0-.001 3.999A2 2 0 0 0 16 14zm10 0a2 2 0 1 0-.001 3.999A2 2 0 0 0 26 14z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <h5
    className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="headline1"
  >
    inverse
  </h5>
  <div
    className="c6 group"
    direction="horizontal"
    onClick={[Function]}
    onKeyUp={[Function]}
  >
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c8 RcIconButton-root RcIconButton-inverse"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 emoji icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm0 2C9.373 4 4 9.373 4 16s5.373 12 12 12 12-5.373 12-12S22.627 4 16 4zm4.328 14.505a1 1 0 1 1 1.73 1.004A6.997 6.997 0 0 1 16 23a6.996 6.996 0 0 1-6.031-3.445 1 1 0 1 1 1.723-1.017A4.997 4.997 0 0 0 16.001 21a4.995 4.995 0 0 0 4.328-2.495zM11 10a2 2 0 1 1 .001 3.999A2 2 0 0 1 11 10zm10 0a2 2 0 1 1 .001 3.999A2 2 0 0 1 21 10z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c8 RcIconButton-root RcIconButton-inverse"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 quote icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M28 4a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2h-7.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141a1 1 0 0 0-.707-.293H4.001a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h24zm-1 2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h7a2 2 0 0 1 1.414.586L16 25.172l2.586-2.586A2 2 0 0 1 20 22h7a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1zm-15 4a3 3 0 0 1 2.98 2.65l.015.185.005.164-.004.147a2.529 2.529 0 0 1-.01.152l.001-.031a6.958 6.958 0 0 1-3.056 5.525.5.5 0 0 1-.579-.818 6.018 6.018 0 0 0 2.026-2.31 3 3 0 1 1-1.376-5.666zm8 0a3 3 0 0 1 2.98 2.65l.015.185.005.164-.004.147a2.529 2.529 0 0 1-.01.152v-.031a6.958 6.958 0 0 1-3.056 5.525.5.5 0 0 1-.579-.818 6.018 6.018 0 0 0 2.026-2.31 3 3 0 1 1-1.376-5.666z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c8 RcIconButton-root RcIconButton-inverse"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 unpin icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9.946 20.442 1.613 1.613-7.256 7.256c-.445.445-2.78 2.058-3.225 1.613s1.167-2.78 1.613-3.225l7.256-7.256zM19.63 1.154c.086.05.165.11.235.181l10.802 10.801a1.141 1.141 0 0 1-.235 1.794l-8.715 5.046a10.246 10.246 0 0 1-2.901 8.723 1.141 1.141 0 0 1-1.613 0l-12.9-12.9a1.141 1.141 0 0 1 0-1.613 10.248 10.248 0 0 1 8.724-2.901l5.045-8.715a1.14 1.14 0 0 1 1.558-.415zm-.389 2.385-5.161 8.917-1.338-.192a8.249 8.249 0 0 0-6.105 1.54l-.281.219 11.62 11.62.029-.033a8.24 8.24 0 0 0 1.768-6.055l-.037-.296-.192-1.338 8.916-5.163-9.219-9.219z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c8 RcIconButton-root RcIconButton-inverse"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 signal-0 icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm10 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm10 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zM6 14a2 2 0 1 0-.001 3.999A2 2 0 0 0 6 14zm10 0a2 2 0 1 0-.001 3.999A2 2 0 0 0 16 14zm10 0a2 2 0 1 0-.001 3.999A2 2 0 0 0 26 14z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
  <h5
    className="MuiTypography-root c1 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="headline1"
  >
    outline
  </h5>
  <div
    className="c9 group"
    direction="horizontal"
    onClick={[Function]}
    onKeyUp={[Function]}
  >
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c10 RcIconButton-root RcIconButton-outline"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 emoji icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 2c7.732 0 14 6.268 14 14s-6.268 14-14 14S2 23.732 2 16 8.268 2 16 2zm0 2C9.373 4 4 9.373 4 16s5.373 12 12 12 12-5.373 12-12S22.627 4 16 4zm4.328 14.505a1 1 0 1 1 1.73 1.004A6.997 6.997 0 0 1 16 23a6.996 6.996 0 0 1-6.031-3.445 1 1 0 1 1 1.723-1.017A4.997 4.997 0 0 0 16.001 21a4.995 4.995 0 0 0 4.328-2.495zM11 10a2 2 0 1 1 .001 3.999A2 2 0 0 1 11 10zm10 0a2 2 0 1 1 .001 3.999A2 2 0 0 1 21 10z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c10 RcIconButton-root RcIconButton-outline"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 quote icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M28 4a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2h-7.586a.997.997 0 0 0-.707.293l-3.141 3.141a.8.8 0 0 1-1.131 0l-3.141-3.141a1 1 0 0 0-.707-.293H4.001a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h24zm-1 2H5a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h7a2 2 0 0 1 1.414.586L16 25.172l2.586-2.586A2 2 0 0 1 20 22h7a1 1 0 0 0 1-1V7a1 1 0 0 0-1-1zm-15 4a3 3 0 0 1 2.98 2.65l.015.185.005.164-.004.147a2.529 2.529 0 0 1-.01.152l.001-.031a6.958 6.958 0 0 1-3.056 5.525.5.5 0 0 1-.579-.818 6.018 6.018 0 0 0 2.026-2.31 3 3 0 1 1-1.376-5.666zm8 0a3 3 0 0 1 2.98 2.65l.015.185.005.164-.004.147a2.529 2.529 0 0 1-.01.152v-.031a6.958 6.958 0 0 1-3.056 5.525.5.5 0 0 1-.579-.818 6.018 6.018 0 0 0 2.026-2.31 3 3 0 1 1-1.376-5.666z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c10 RcIconButton-root RcIconButton-outline"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 unpin icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9.946 20.442 1.613 1.613-7.256 7.256c-.445.445-2.78 2.058-3.225 1.613s1.167-2.78 1.613-3.225l7.256-7.256zM19.63 1.154c.086.05.165.11.235.181l10.802 10.801a1.141 1.141 0 0 1-.235 1.794l-8.715 5.046a10.246 10.246 0 0 1-2.901 8.723 1.141 1.141 0 0 1-1.613 0l-12.9-12.9a1.141 1.141 0 0 1 0-1.613 10.248 10.248 0 0 1 8.724-2.901l5.045-8.715a1.14 1.14 0 0 1 1.558-.415zm-.389 2.385-5.161 8.917-1.338-.192a8.249 8.249 0 0 0-6.105 1.54l-.281.219 11.62 11.62.029-.033a8.24 8.24 0 0 0 1.768-6.055l-.037-.296-.192-1.338 8.916-5.163-9.219-9.219z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
    <button
      aria-describedby={null}
      aria-label="like"
      className="MuiButtonBase-root c10 RcIconButton-root RcIconButton-outline"
      disabled={false}
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      title="like"
      type="button"
    >
      <span
        className="c4 signal-0 icon"
      >
        <svg
          className="c5"
          viewBox="0 0 32 32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 12a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm10 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zm10 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8zM6 14a2 2 0 1 0-.001 3.999A2 2 0 0 0 6 14zm10 0a2 2 0 1 0-.001 3.999A2 2 0 0 0 16 14zm10 0a2 2 0 1 0-.001 3.999A2 2 0 0 0 26 14z"
          />
        </svg>
        
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
